--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
          <input type="text" id="player2_name_input" class="form-control" placeholder="Player 2 Name">
       </div>
       <br>
-      <button style="width:30%" class="btn btn-primary" onclick="addUser()">Log In</button>
+      <button style="width:30%" class="btn btn-primary" onclick="addUser()">Log In</button
      </center>
+     <script src="quiz_game_page.js"></script>
     </body>
 </html>
